<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Skillcinema</string>
    <string name="title">Skillcinema</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_welcome_screen">First welcome screen</string>
    <string name="btn_kip">Skip</string>
    <string name="text_welcome_1">Find out about premieres</string>
    <string name="text_welcome_2">Manage your own collections</string>
    <string name="text_welcome_3">Share with friends</string>
    <string name="text_premieres">Premieres</string>
    <string name="btn_show_all">show all</string>

    <string name="kinopoisk_api_key">e1eb1015-aa86-4d62-be8e-cb8730a89156</string>
    <string name="first_page">1</string>
    <string name="kinopoisk_collections_base_url">https://kinopoiskapiunofficial.tech/api/</string>
    <string name="text_popular">Popular</string>
    <string name="text_random1">Random list 1</string>
    <string name="text_random2">Random list 2</string>
    <string name="text_top250">TOP 250</string>
    <string name="text_serials">Serials</string>
    <string name="text_seasons_episodes">Seasons and episodes</string>
    <string name="text_country">"Country: "</string>
    <string name="text_genre">"genre: "</string>
    <string name="text_cast">"Top cast: "</string>
    <string name="text_crew">"Crew: "</string>
    <string name="text_gallery">"Photos: "</string>
    <string name="text_similar">"More like this: "</string>
    <string name="text_best">"Best "</string>
    <string name="text_all">"All "</string>
    <string name="text_movie_list">Movie list</string>
    <string name="text_total_films">Total films:</string>
    <string name="text_loading">Loading...</string>
    <string name="text_serial_season">Season:</string>
    <string name="text_photo">Photo:</string>
    <string name="text_search_hint">Films, actors, directors</string>
    <string name="text_search_is_empty">Sorry. There are no films matching your request.</string>
    <string name="text_show">Show</string>
    <string name="text_show_all">All</string>
    <string name="text_show_films">Films</string>
    <string name="text_show_tv_series">TV series</string>
    <string name="text_country_settings">"Country "</string>
    <string name="text_genre_settings">"Genre "</string>
    <string name="text_year_settings">Year</string>
    <string name="text_sorting_settings">Sorting</string>
    <string name="text_rating_settings">Rating</string>
    <string name="text_sort_data">Data</string>
    <string name="text_sort_popularity">Popularity</string>
    <string name="text_sort_rating">Rating</string>
    <string name="text_viewed">Viewed</string>
    <string name="text_not_viewed">Not viewed</string>
    <string name="text_apply">Apply</string>
    <string name="text_ratings_any">any</string>
    <string name="text_year_from">Search in years from</string>
    <string name="text_year_to">Search in years to</string>
    <string name="text_collections">Collections</string>
    <string name="text_create_collection">Create collection</string>
    <string name="text_create_collection_input_name">Input name for new collection</string>
    <string name="text_interested">Interested</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create_collection_accept">Create new collection</string>
    <string name="text_clear_history">Clear history</string>
    <string name="text_share_text">Check out this film:</string>
    <string name="text_add_to_collection">Add to collection</string>
    <string name="text_internet_error">Can not connect to \"kinopoiskapiunofficial.tech\". May be wireless data or WiFi is off. Or connection is too slow.</string>
    <string name="text_error">Error</string>
    <string name="text_exit">Close application</string>
    <string name="text_retry">Retry</string>
    <string name="text_error_401">Wrong token. Bad luck :-)</string>
    <string name="text_error_402">Query limit reached. Try again tomorrow. Sorry.</string>
    <string name="text_error_404">No data. 404!!!!</string>
    <string name="text_error_429">Too many querries. Slow down :-)</string>
    <string name="text_error_unknown">"Sorry for technical information. :-( \n But it is needed for debug :-) \n"</string>
    <string name="text_no_films_in_collection">No films :-(</string>
    <string name="leak_canary_test_class_name">assertk.Assert</string>


</resources>