<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.user.UserFragment">

        <ProgressBar
            android:id="@+id/progressBarDBUpdaiting"
            style="@android:style/Widget.Holo.Light.ProgressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="100dp"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateTint="@color/main_purple"
            android:mirrorForRtl="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFilmViewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewViewed" />

        <Button
            android:id="@+id/btnShowAllViewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="#00FFFFFF"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:text="@string/btn_show_all"
            android:textColor="#3D3BFE"
            android:textSize="16sp"
            app:iconTint="#00FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewViewed"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewViewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_viewed"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCollections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_collections"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewFilmViewed" />

        <Button
            android:id="@+id/btnCreateCollection"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:text="@string/text_create_collection"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:icon="@drawable/ic_plus"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCollections" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCollections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateCollection" />

        <TextView
            android:id="@+id/textViewInterested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_interested"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewCollections" />

        <Button
            android:id="@+id/btnShowAllInterested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="#00FFFFFF"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:text="@string/btn_show_all"
            android:textColor="#3D3BFE"
            android:textSize="16sp"
            app:iconTint="#00FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewInterested"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewInterested"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInterested" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>